testdata/valid/duplicate-names.pakt
# Duplicate root statement name — both preserved in encounter order (spec §6.1)
name:str = 'Alice'
name:str = 'Bob'
