testdata/invalid/duplicate-name.pakt
# ERROR: duplicate name 'name' at root level
name:str = 'Alice'
name:str = 'Bob'
